# options-market-maker

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: CI.yml  test.yml
data/samples/options/AAPL/: AAPL_2023-09-19.json
data/samples/options/MSFT/: MSFT_2023-09-19.json
notebooks/: implied_volatility_visualization.ipynb  volatility_surface_visualization.ipynb
notebooks/visualizations/: black_scholes_visualization.ipynb  greeks_visualization.ipynb  implied_volatility_visualization.ipynb  volatility_surface_visualization.ipynb
src/options_market_maker/market_data/: alpha_vantage.py
src/options_market_maker/pricing/: black_scholes.py  implied_volatility.py  volatility_surface.py
tests/: test_black_scholes.py  test_implied_volatility.py  test_volatility_surface.py
