[project]
authors = [{name = "ElPhysico", email = "vkkleinqt@gmail.com"}]
dependencies = []
name = "options-market-maker"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
numpy = "*"
scipy = "*"
pandas = "*"
matplotlib = "*"
jupyter = "*"
alpha_vantage = ">=3.0.0,<4"
python-dotenv = ">=1.0.1,<2"

[tool.pixi.pypi-dependencies]
options_market_maker = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"

[dependency-groups]
test = ["pytest"]
